Added site url in wp-config

--- a/ansible/templates/wp-config.php.j2
+++ b/ansible/templates/wp-config.php.j2
@@ -89,7 +89,8 @@ define( 'WP_DEBUG', false );
 
 /* Add any custom values between this line and the "stop editing" line. */
 
-define( 'WP_SITEURL', 'https://redux-project.anitta.redux.cloud/' );
+define( 'WP_SITEURL', 'https://redux-project.anitta.redux.cloud' );
+define( 'WP_HOME', 'https://redux-project.anitta.redux.cloud' );
 
 
 /* That's all, stop editing! Happy publishing. */
