--- a/ansible/templates/wp-config.php.j2
+++ b/ansible/templates/wp-config.php.j2
@@ -92,6 +92,10 @@ define( 'WP_DEBUG', false );
 define( 'WP_SITEURL', 'https://redux-project.anitta.redux.cloud' );
 define( 'WP_HOME', 'https://redux-project.anitta.redux.cloud' );
 
+if ($_SERVER['HTTP_X_FORWARDED_PROTO'] == 'https') {
+    $_SERVER['HTTPS'] = 'on';
+}
+define('FORCE_SSL_ADMIN', true);
 
 /* That's all, stop editing! Happy publishing. */
 
