--- a/ansible/templates/wp-config.php.j2
+++ b/ansible/templates/wp-config.php.j2
@@ -96,7 +96,7 @@ if ($_SERVER['HTTP_X_FORWARDED_PROTO'] == 'https') {
     $_SERVER['HTTPS'] = 'on';
 }
 define('FORCE_SSL_ADMIN', true);
-
+define('FS_METHOD', 'direct');
 /* That's all, stop editing! Happy publishing. */
 
 /** Absolute path to the WordPress directory. */
